--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "cra-template-pwa": "2.0.0",
+    "framer-motion": "^12.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
     "web-vitals": "^5.0.1"
   },
   "scripts": {
